<resources>
    <string name="app_name">BengkelMotor</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAjBJhV9a1erkAG8qff3tY0BczQoMhXico
    </string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">1932508860348049</string>
    <string name="fb_login_protocol_scheme">fb1932508860348049</string>

    <string name="sample"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="registrasi_bengkel">Registrasi Bengkel</string>
    <string name="tips">Tips</string>
    <string name="about">About</string>
    <string name="logout">LogOut</string>
    <string name="nilai_bengkel_ini">Nilai bengkel ini</string>
    <string name="tuliskan_ulasan_singkat_anda">Tuliskan ulasan singkat anda</string>
    <string name="submit">SUBMIT</string>
    <string name="telepon">Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="nama_bengkel">Nama Bengkel</string>
    <string name="jam_tutup">Jam Tutup</string>
    <string name="jam_buka">Jam Buka</string>
    <string name="strip">-</string>
    <string name="add_bengkel">ADD BENGKEL</string>
    <string name="set_lokasi">SET LOKASI</string>
    <string name="minggu">Minggu</string>
    <string name="sabtu">Sabtu</string>
    <string name="jumat">Jumat</string>
    <string name="kamis">Kamis</string>
    <string name="rabu">Rabu</string>
    <string name="selasa">Selasa</string>
    <string name="senin">Senin</string>
    <string name="no_telepon_bengkel">No Telepon Bengkel</string>
    <string name="alamat_bengkel">Alamat Bengkel</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>


</resources>
