<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.efpro.bengkelmotor_01.Activity.DetailBengkelActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:layout_anchor="@+id/ctolbar"
        app:layout_anchorGravity="bottom|right|end"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:id="@+id/appbar"
        android:theme="@style/NoActionBar">


        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:id="@+id/ctolbar"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMargin="5dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:layout_height="match_parent"
            android:theme="@style/NoActionBar">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:id="@+id/imgDetailBengkel"
                app:srcCompat="@mipmap/ic_launcher"
                android:background="@color/colorPrimary"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:layout_height="200dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="bottom"
                android:background="@drawable/scrim"  />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:id="@+id/nested"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <!--//body-->
            <android.support.v7.widget.CardView
                android:id="@+id/cdvDetailBengkel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/white"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtDAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="Alamat" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="Jam Buka" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtDToday"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginLeft="8dp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/txtDHari"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginLeft="8dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtDHour"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginLeft="8dp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/txtDJam"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginRight="8dp"
                                android:layout_marginLeft="8dp" />

                        </LinearLayout>


                    </LinearLayout>


                    <TextView
                        android:id="@+id/txtDTelepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="Telepon" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cdvMyReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/white"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btnMenuReview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/actionOverflowButtonStyle"
                        android:layout_gravity="right"
                        android:visibility="gone"
                        android:onClick="showPopup"/>

                    <ImageView
                        android:id="@+id/imgMyProfile"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_margin="8dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_launcher_round" />
                    <TextView
                        android:id="@+id/txtMyUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Nama Profile"
                        android:textSize="18sp"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/txtPostDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nilai_bengkel_ini"
                        android:layout_gravity="center"
                        />
                    <RatingBar
                        android:id="@+id/rtbMyRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:stepSize="1"
                        android:theme="@style/RatingBar"/>
                    <TextView
                        android:id="@+id/txtMyComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_margin="8dp"
                        android:text="@string/sample"
                        android:visibility="gone"/>

                    <EditText
                        android:id="@+id/edtReview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tuliskan_ulasan_singkat_anda"
                        android:layout_margin="8dp"/>
                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/cardview_light_background"
                        android:text="@string/submit"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cdvReviewBengkel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/white"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <com.efpro.bengkelmotor_01.ExpandableHeightListView
                    android:id="@+id/reviewListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.efpro.bengkelmotor_01.ExpandableHeightListView>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>